# inve-crypt

./: Cargo.toml  README.md
examples/: Cargo.toml  aes_gcm_test.rs  chacha20.rs  ecdsa_k256_test.rs  ecdsa_p256_test.rs  ed25519_test.rs  rsa_test.rs  xsalsa20.rs
inve-MAC/cmac/: Cargo.toml
inve-MAC/cmac/src/: lib.rs
inve-MAC/hmac/: Cargo.toml
inve-MAC/hmac/src/: lib.rs  optim.rs  simple.rs
inve-aes-gcm/: Cargo.toml
inve-aes-gcm/src/: aes_gcm.rs  lib.rs
inve-bigint/: Cargo.toml
inve-bigint/src/: array.rs  checked.rs  lib.rs  limb.rs  nlimbs.rs  non_zero.rs  traits.rs  uint.rs  wrapping.rs
inve-bigint/src/limb/: add.rs  bit_and.rs  bit_not.rs  bit_or.rs  bit_xor.rs  bits.rs  cmp.rs  encoding.rs  from.rs  mul.rs  rand.rs  sub.rs
inve-bigint/src/uint/: add.rs  add_mod.rs  array.rs  bit_and.rs  bit_not.rs  bit_or.rs  bit_xor.rs  bits.rs  cmp.rs  div.rs  encoding.rs  from.rs  macros.rs  mul.rs  neg_mod.rs  rand.rs  shl.rs  shr.rs  sqrt.rs  sub.rs  sub_mod.rs
inve-bigint/src/uint/encoding/: decoder.rs  der.rs  rlp.rs
inve-block/cipher/aes/: Cargo.toml
inve-block/cipher/aes/src/: armv8.rs  autodetect.rs  hazmat.rs  lib.rs  ni.rs  soft.rs
inve-block/cipher/aes/src/armv8/: encdec.rs  expand.rs  hazmat.rs  test_expand.rs
inve-block/cipher/aes/src/ni/: aes128.rs  aes192.rs  aes256.rs  hazmat.rs  utils.rs
inve-block/cipher/aes/src/soft/: fixslice32.rs  fixslice64.rs
inve-block/cipher/des/: Cargo.toml
inve-block/cipher/des/src/: consts.rs  des.rs  lib.rs  tdes.rs
inve-block/cipher/magma/: Cargo.toml
inve-block/cipher/magma/src/: lib.rs  sboxes.rs
inve-block/cipher/sm4/: Cargo.toml
inve-block/cipher/sm4/src/: lib.rs
inve-block/mode/ctr/: Cargo.toml
inve-block/mode/ctr/src/: ctr_core.rs  flavors.rs  lib.rs
inve-block/mode/ctr/src/flavors/: ctr128.rs  ctr32.rs  ctr64.rs
inve-chacha20poly1305/: Cargo.toml
inve-chacha20poly1305/src/: cipher.rs  lib.rs
inve-curve25519/: Cargo.toml
inve-curve25519/src/: constants.rs  edwards.rs  field.rs  lib.rs  macros.rs  montgomery.rs  prelude.rs  ristretto.rs  scalar.rs  traits.rs  window.rs
inve-curve25519/src/backend/: mod.rs
inve-curve25519/src/backend/serial/: mod.rs
inve-curve25519/src/backend/serial/curve_models/: mod.rs
inve-curve25519/src/backend/serial/fiat_u32/: field.rs  mod.rs
inve-curve25519/src/backend/serial/fiat_u64/: field.rs  mod.rs
inve-curve25519/src/backend/serial/scalar_mul/: mod.rs  pippenger.rs  precomputed_straus.rs  straus.rs  variable_base.rs  vartime_double_base.rs
inve-curve25519/src/backend/serial/u32/: constants.rs  field.rs  scalar.rs
inve-curve25519/src/backend/serial/u64/: constants.rs  field.rs  scalar.rs
inve-curve25519/src/backend/vector/: mod.rs
inve-curve25519/src/backend/vector/avx2/: constants.rs  edwards.rs  field.rs  mod.rs
inve-curve25519/src/backend/vector/ifma/: constants.rs  edwards.rs  field.rs  mod.rs
inve-curve25519/src/backend/vector/scalar_mul/: pippenger.rs  precomputed_straus.rs  straus.rs  variable_base.rs  vartime_double_base.rs
inve-ecdsa/ecdsa/: Cargo.toml
inve-ecdsa/ecdsa-k256/: Cargo.toml
inve-ecdsa/ecdsa-k256/src/: arithmetic.rs  ecdh.rs  ecdsa.rs  lib.rs  test_vectors.rs
inve-ecdsa/ecdsa-k256/src/arithmetic/: affine.rs  dev.rs  field.rs  hash2curve.rs  mul.rs  projective.rs  scalar.rs
inve-ecdsa/ecdsa-k256/src/arithmetic/field/: field_10x26.rs  field_5x52.rs  field_impl.rs
inve-ecdsa/ecdsa-k256/src/arithmetic/scalar/: wide32.rs  wide64.rs
inve-ecdsa/ecdsa-k256/src/ecdsa/: normalize.rs  recoverable.rs  sign.rs  verify.rs
inve-ecdsa/ecdsa-k256/src/test_vectors/: ecdsa.rs  group.rs
inve-ecdsa/ecdsa-p256/: Cargo.toml
inve-ecdsa/ecdsa-p256/src/: arithmetic.rs  ecdh.rs  ecdsa.rs  lib.rs
inve-ecdsa/ecdsa-p256/src/arithmetic/: affine.rs  field.rs  hash2curve.rs  projective.rs  scalar.rs  util.rs
inve-ecdsa/ecdsa-p256/src/arithmetic/scalar/: blinded.rs
inve-ecdsa/ecdsa-p256/src/test_vectors/: ecdsa.rs  field.rs  group.rs
inve-ecdsa/ecdsa/src/: der.rs  dev.rs  hazmat.rs  lib.rs  recovery.rs  sign.rs  verify.rs
inve-ecdsa/rfc6979/: Cargo.toml
inve-ecdsa/rfc6979/src/: lib.rs
inve-ed25519/ed25519/: Cargo.toml
inve-ed25519/ed25519-impl/: Cargo.toml
inve-ed25519/ed25519-impl/src/: batch.rs  constants.rs  errors.rs  keypair.rs  lib.rs  public.rs  secret.rs  signature.rs
inve-ed25519/ed25519/src/: lib.rs  pkcs8.rs
inve-elliptic-curve/: Cargo.toml
inve-hash/sha1/: Cargo.toml
inve-hash/sha1/src/: compress.rs  lib.rs
inve-hash/sha1/src/compress/: aarch64.rs  soft.rs  x86.rs
inve-hash/sha2/: Cargo.toml
inve-hash/sha2/src/: consts.rs  core_api.rs  lib.rs  sha256.rs  sha512.rs
inve-hash/sha2/src/sha256/: aarch64.rs  soft.rs  x86.rs
inve-hash/sha2/src/sha512/: soft.rs  x86.rs
inve-hash/sha3/: Cargo.toml
inve-hash/sha3/src/: lib.rs
inve-rsa/: Cargo.toml
inve-rsa/src/: algorithms.rs  (+11 more)
inve-stream-cipher/chacha20/: Cargo.toml
inve-stream-cipher/chacha20/src/: legacy.rs  lib.rs  xchacha.rs
inve-stream-cipher/chacha20/src/backends/: avx2.rs  neon.rs  soft.rs  sse2.rs
inve-stream-cipher/salsa20/: Cargo.toml
inve-stream-cipher/salsa20/src/: lib.rs  xsalsa.rs
inve-trait/aead/: Cargo.toml
inve-trait/aead/src/: dev.rs  lib.rs  stream.rs
inve-trait/cipher/: Cargo.toml
inve-trait/cipher/src/: block.rs  errors.rs  lib.rs  stream.rs  stream_core.rs  stream_wrapper.rs
inve-trait/cipher/src/dev/: block.rs  stream.rs
inve-trait/crypto-common/: Cargo.toml
inve-trait/crypto-common/src/: lib.rs
inve-trait/digest/: Cargo.toml
inve-trait/digest/src/: core_api.rs  dev.rs  digest.rs  lib.rs  mac.rs
inve-trait/digest/src/core_api/: ct_variable.rs  rt_variable.rs  wrapper.rs  xof_reader.rs
inve-trait/digest/src/dev/: fixed.rs  mac.rs  rng.rs  variable.rs  xof.rs
inve-trait/signature/: Cargo.toml
inve-trait/signature/async/: Cargo.toml
inve-trait/signature/async/src/: lib.rs
inve-trait/signature/derive/: Cargo.toml
inve-trait/signature/derive/src/: lib.rs
inve-trait/signature/src/: error.rs  lib.rs  signature.rs  signer.rs  verifier.rs
inve-xsalsa20poly1305/: Cargo.toml
(+46 files in other folders)
