[workspace]

members = [
    "inve-aes-gcm",
    "inve-chacha20poly1305",
    "inve-xsalsa20poly1305",
    "inve-rsa",
    "inve-ed25519/ed25519",
    "inve-ed25519/ed25519-impl",
    "inve-ecdsa/ecdsa",
    "inve-ecdsa/ecdsa-k256",
    "inve-ecdsa/ecdsa-p256",
    "inve-ecdsa/rfc6979",
    "inve-elliptic-curve",
    "inve-hash/sha1",
    "inve-hash/sha2",
    "inve-hash/sha3",
    "inve-utils/blobby",
    "inve-utils/block-buffer",
    "inve-trait/crypto-common",
    "inve-trait/cipher",
    "inve-trait/aead",
    "inve-trait/digest",
    "inve-trait/signature",
    "inve-block/cipher/aes",
    "inve-block/cipher/des",
    "inve-block/cipher/kuznyechik",
    "inve-block/cipher/magma",
    "inve-block/cipher/sm4",
    "inve-block/mode/ctr",
    "inve-MAC/hmac",
    "inve-MAC/cmac",
    "inve-curve25519",
    "inve-bigint",
    "inve-stream-cipher/chacha20",
    "inve-stream-cipher/salsa20",

    "examples",
]
