[package]
name = "inve-aes-gcm"
version = "0.0.1"
description = "Pure Rust implementation of the AES-GCM."
edition = "2021"
license = "Apache-2.0"
keywords = ["aead", "aes", "encryption", "gcm", "ghash"]
categories = ["cryptography", "no-std"]

[dependencies]
aead = { path = "../inve-trait/aead", package = "inve-aead", default-features = false }
aes = { path = "../inve-block/cipher/aes", package = "inve-aes", optional = true }
cipher = { path = "../inve-trait/cipher", package = "inve-cipher" }
ctr = { path = "../inve-block/mode/ctr", package = "inve-ctr" }
ghash = { version = "0.4.2", default-features = false }
subtle = { version = "2", default-features = false }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
aead = { path = "../inve-trait/aead", package = "inve-aead", features = ["dev"], default-features = false }
hex-literal = "0.3"

[features]
default    = ["aes", "alloc"]
std        = ["aead/std", "alloc"]
alloc      = ["aead/alloc"]
armv8      = ["ghash/armv8"] # nightly-only
force-soft = ["ghash/force-soft"]
heapless   = ["aead/heapless"]
stream     = ["aead/stream"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
