[package]
name = "inve-cmac"
version = "0.0.1"
description = "Generic implementation of Cipher-based Message Authentication Code."
license = "Apache-2.0"
edition = "2021"
rust-version = "1.57"
keywords = ["crypto", "mac", "cmac", "omac"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = { version = "0.10.3", features = ["mac"] }
cipher = "0.4.2"
dbl = "0.3"

[dev-dependencies]
digest = { version = "0.10.3", features = ["dev"] }
hex-literal = "0.3"
aes = "0.8"
des = "0.8"
kuznyechik = "0.8"
magma = "0.8"

[features]
std = ["digest/std"]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
