[package]
name = "inve-ed25519-impl"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
keywords = ["cryptography", "ed25519", "curve25519", "signature", "ECC"]
categories = ["cryptography", "no-std"]
description = "Fast and efficient ed25519 EdDSA key generations, signing, and verification in pure Rust."
exclude = [ ".gitignore", "TESTVECTORS", "res/*" ]

[package.metadata.docs.rs]
# Disabled for now since this is borked; tracking https://github.com/rust-lang/docs.rs/issues/302
# rustdoc-args = ["--html-in-header", ".cargo/registry/src/github.com-1ecc6299db9ec823/curve25519-0.13.2/rustdoc-include-katex-header.html"]
features = ["nightly", "batch"]

[dependencies]
curve25519 = { path = "../../inve-curve25519", package = "inve-curve25519", default-features = false }
ed25519 = { path = "../ed25519", package = "inve-ed25519", default-features = false }
merlin = { version = "2", default-features = false, optional = true }
rand = { version = "0.8", default-features = false, optional = true }
rand_core = { version = "0.6.3", default-features = false, optional = true }
serde_crate = { package = "serde", version = "1.0", default-features = false, optional = true }
serde_bytes = { version = "0.11", optional = true }
sha2 = { version = "0.9.9", default-features = false }
zeroize = { version = "1.5.4", default-features = false }

[dev-dependencies]
hex = "^0.4"
bincode = "1.0"
serde_json = "1.0"
criterion = "0.3"
rand = "0.8"
serde_crate = { package = "serde", version = "1.0", features = ["derive"] }
toml = { version = "0.5" }

[features]
default = ["std", "rand", "u64_backend"]
std = ["curve25519/std", "ed25519/std", "serde_crate/std", "sha2/std", "rand/std"]
alloc = ["curve25519/alloc", "rand/alloc", "zeroize/alloc"]
nightly = ["curve25519/nightly"]
serde = ["serde_crate", "serde_bytes", "ed25519/serde"]
batch = ["merlin", "rand"]
# This feature enables deterministic batch verification.
batch_deterministic = ["merlin", "rand", "rand_core"]
asm = ["sha2/asm"]
# This features turns off stricter checking for scalar malleability in signatures
legacy_compatibility = []
u64_backend = ["curve25519/u64_backend"]
u32_backend = ["curve25519/u32_backend"]
simd_backend = ["curve25519/simd_backend"]
