[package]
name = "inve-ed25519"
version = "0.0.1"
license = "Apache-2.0"
description = "Edwards Digital Signature Algorithm (EdDSA) over Curve25519."
categories = ["cryptography", "no-std"]
keywords = ["crypto", "curve25519", "ecc", "signature", "signing"]
edition = "2021"
rust-version = "1.57"

[dependencies]
signature = { path = "../../inve-trait/signature", package = "inve-signature", default-features = false }

# optional dependencies
pkcs8 = { version = "0.8", optional = true }
serde = { version = "1", optional = true, default-features = false }
serde_bytes_crate = { package = "serde_bytes", version = "0.11", optional = true }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
bincode = "1"
hex-literal = "0.3"
rand_core = { version = "0.6.3", default-features = false }

[features]
default = ["std"]
alloc = ["pkcs8/alloc"]
pem = ["pkcs8/pem"]
serde_bytes = ["serde", "serde_bytes_crate", "std"]
std = ["signature/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
