[package]
name = "inve-chacha20"
version = "0.0.1"
description = "The ChaCha20 stream cipher (RFC 8439) implemented in pure Rust."
license = "Apache-2.0"
edition = "2021"
rust-version = "1.57"
keywords = ["crypto", "stream-cipher", "chacha8", "chacha12", "xchacha20"]
categories = ["cryptography", "no-std"]

[dependencies]
cfg-if = "1"
cipher = { path = "../../inve-trait/cipher", package = "inve-cipher" }

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"

[dev-dependencies]
cipher = { path = "../../inve-trait/cipher", package = "inve-cipher", features = ["dev"] }
hex-literal = "0.3.3"

[features]
std = ["cipher/std"]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
