[package]
name = "inve-aead"
version = "0.0.1"
description = "Traits for Authenticated Encryption with Associated Data (AEAD) algorithms."
edition = "2021"
license = "Apache-2.0"
keywords = ["crypto", "encryption"]
categories = ["cryptography", "no-std"]

[dependencies]
generic-array = { version = "0.14", default-features = false }

# optional dependencies
blobby = { version = "0.3", optional = true }
bytes = { version = "1", optional = true, default-features = false }
heapless = { version = "0.7", optional = true, default-features = false }
rand_core = { version = "0.6", optional = true }

[features]
alloc = []
std = ["alloc", "rand_core/std"]
dev = ["blobby"]
stream = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
