[package]
name = "inve-cipher"
version = "0.0.1"
description = "Traits for describing block ciphers and stream ciphers."
license = "Apache-2.0"
edition = "2021"
rust-version = "1.57"
keywords = ["crypto", "block-cipher", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
crypto-common = { path = "../crypto-common" }
inout = "0.1"

# optional dependencies
blobby = { version = "0.3", optional = true }
zeroize = { version = "1.5", optional = true, default-features = false }

[features]
alloc = []
std = ["alloc", "crypto-common/std", "inout/std"]
block-padding = ["inout/block-padding"]
rand_core = ["crypto-common/rand_core"] # Enable random key and IV generation methods
dev = ["blobby"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
