[package]
name = "crypto-common"
description = "Common cryptographic traits."
version = "0.0.1"
license = "Apache-2.0"
edition = "2021"
keywords = ["crypto", "traits"]
categories = ["cryptography", "no-std"]

[dependencies]
generic-array = { version = "0.14.4", features = ["more_lengths"] }
rand_core = { version = "0.6", optional = true }
typenum = "1.14"

[features]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
