[package]
name = "inve-digest"
description = "Traits for cryptographic hash functions."
version = "0.0.1"
license = "Apache-2.0"
edition = "2021"
keywords = ["digest", "crypto", "hash"]
categories = ["cryptography", "no-std"]

[dependencies]
crypto-common = { path = "../crypto-common" }

block-buffer = { version = "0.10", optional = true }
subtle = { version = "=2.4", default-features = false, optional = true }
blobby = { version = "0.3", optional = true }

[features]
default = ["core-api"]
core-api = ["block-buffer"]
mac = ["subtle"]
rand_core = ["crypto-common/rand_core"]
alloc = []
std = ["alloc", "crypto-common/std"]
dev = ["blobby"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
