[package]
name = "inve-aes"
version = "0.0.1"
description = "Pure Rust implementation of the Advanced Encryption Standard."
license = "Apache-2.0"
edition = "2021"
rust-version = "1.57"
keywords = ["crypto", "aes", "rijndael", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cfg-if = "1"
cipher = { path = "../../../inve-trait/cipher", package = "inve-cipher" }
zeroize = { version = "1.5.4", optional = true, default_features = false }

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86_64", target_arch = "x86"))'.dependencies]
cpufeatures = "0.2"

[dev-dependencies]
cipher = { path = "../../../inve-trait/cipher", package = "inve-cipher", features = ["dev"] }
hex-literal = "0.3"

[features]
hazmat     = [] # Expose cryptographically hazardous APIs

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
