[package]
name = "inve-magma"
version = "0.0.1"
description = "Magma (GOST R 34.12-2015) block cipher."
license = "Apache-2.0"
edition = "2021"
rust-version = "1.57"
keywords = ["crypto", "magma", "gost", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = { path = "../../../inve-trait/cipher", package = "inve-cipher" }

[dev-dependencies]
cipher = { path = "../../../inve-trait/cipher", package = "inve-cipher", features = ["dev"] }
hex-literal = "0.3.3"

[features]
zeroize = ["cipher/zeroize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
