[package]
name          = "async-signature"
description   = "Traits for cryptographic signature algorithms (e.g. ECDSA, Ed25519)"
version       = "0.0.1"
license       = "Apache-2.0"
readme        = "README.md"
keywords      = ["crypto", "ecdsa", "ed25519", "signature", "signing"]
categories    = ["cryptography", "no-std"]
edition       = "2021"
rust-version  = "1.56"

[dependencies]
async-trait = "0.1.9"
signature = { path = "../", path = ".." }

[features]
digest = ["signature/digest-preview"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
